--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "ly-tab": "^2.1.1",
     "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-easytable": "^1.7.1",
     "vue-pull-to": "^0.1.6",
