--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "svg-sprite-loader": "^4.1.3",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-croppa": "^1.3.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
