--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "ly-tab": "^2.1.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
@@ -57,6 +56,7 @@
     "url-loader": "^0.5.8",
     "vue-croppa": "^1.3.8",
     "vue-loader": "^13.3.0",
+    "vue-slide-tabs": "^1.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
