--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-croppa": "^1.3.8",
+    "vue-js-modal": "^1.3.27",
     "vue-loader": "^13.3.0",
     "vue-slide-tabs": "^1.1.0",
     "vue-style-loader": "^3.0.1",
