--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "clipboard": "^2.0.4",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.2.0",
